--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
-    /* shadcn set up*/
+    // shadcn setup
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
